# wrust

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  wrangler.toml
.github/: agent.md
frontend/: .env  index.html  package-lock.json  package.json  tsconfig.json
frontend/public/: sitemap.xml
frontend/src/: file-system.ts  globals.d.ts  main.ts  signaling.ts  styles.css  types.ts  wasm.ts  webrtc.ts
shared/: Cargo.toml
shared/src/: lib.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
worker/: Cargo.toml  wrangler.toml
worker/src/: lib.rs
