[workspace]
members = ["shared", "wasm", "worker"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
sha2 = "0.10"
hex = "0.4"

[profile.release]
lto = true
codegen-units = 1
