[package]
name = "wrust-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wrust-shared = { path = "../shared" }
serde = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
blake3 = "1"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4"]
