[package]
name = "wrust-worker"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.7", features = ["http"] }
worker-macros = { version = "0.7", features = ["http"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
serde-wasm-bindgen = "0.6"
wrust-shared = { path = "../shared" }
